--- a/requirements.txt
+++ b/requirements.txt
@@ -3,25 +3,25 @@ colorama
 crccheck
 decorator
 docstring-parser
-emoji==2.0.0
+emoji
 exrex
-fire==0.6.0
+fire
 hexdump
-jmespath==1.0.1
+jmespath
 jsonpickle
 lazy-import
-lz4==4.3.2
-msgpack==1.0.4
-parsel==1.9.1
-passlib==1.7.4
-PGPy==0.6.0
-pretty-errors==1.2.25
-prompt_toolkit>=2.0.8
+lz4
+msgpack
+parsel
+passlib
+PGPy
+pretty-errors
+prompt_toolkit
 pycipher
 pycryptodome
 pydash
-pyjwt==1.7.1
-pyOpenSSL==23.2.0
+pyjwt
+pyOpenSSL
 pyperclip
 PyYAML
 regex
